--- a/source/_posts/2023-03-21-现代孔乙己.md
+++ b/source/_posts/2023-03-21-现代孔乙己.md
@@ -30,7 +30,7 @@ category:
 
 因此，我首先反对知识分子穿长衫，却不愿站着喝酒的心理，这和地主阶级的思想无异；须知工程师和工人，都是无产阶级，并不因为你接受过大学教育而有所不同。我的微信签名一直是”穿长衫，站着喝酒“，或许在清末民初时，穿长衫代表着阶级，但在这个以无产者、工农组成的国家，穿长衫和穿短衫，没有本质区别，穿长衫和穿短衫一起站着喝酒，不是一件可耻的事。
 
-推荐大家阅读一下周总理的《关于知识分子的改造问题》
+推荐大家阅读一下周总理的[《关于知识分子的改造问题》](https://www.marxists.org/chinese/zhouenlai/237.htm)
 
 小彩蛋：New Bing如何看知识分子坐着喝酒
 
