--- a/source/_posts/2023-10-28-为什么我如此失望.md
+++ b/source/_posts/2023-10-28-为什么我如此失望.md
@@ -1,7 +1,7 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      为什么我如此失望	# 标题 
-subtitle:   记最近无力感的来源 	 #副标题
+title:      我究竟在抱怨什么	# 标题 
+subtitle:   论如何在短短几天成为高血压与抑郁症 	 #副标题
 date:       2023-10-28              # 时间
 author:     Wh1isper                      # 作者
 catalog: true                       # 是否归档
