--- a/source/_posts/2023-10-28-我究竟在抱怨什么.md
+++ b/source/_posts/2023-10-28-我究竟在抱怨什么.md
@@ -31,11 +31,11 @@ category:
 
 ## 从团队的角度：这不是一个具有"工程师文化"的团队
 
-**缺乏质量意识**：忙是一个客观因素，而“能跑就行”则是最让我感到失望的主观因素。由于S项目的研发经理们和程序员们对于代码的态度都是“能跑就行”，这意味着在我组的工作无论多么优秀，都将受到上下游代码质量和调试时间的影响。这一态度从我入职以来就从未改变，我所能做的只有尽量早地提供我能提供的一切支持，并督促他们尽早尽快地进行联调，这也是我将本组的自动化工作和代码质量作为重要工作内容的原因。但由于目前上下游所在组的资深程序员也有缺口，低级的校招生并不能按时、保质地完成编码任务，常常匆忙中进入联调阶段，由此联调阶段的时间被拉长，bug率显著上升，导致我组负责此项目的人需要投入更多的无效工作，或者说低价值工作来帮助其他组的成员完成项目。我个人称之为：拖累。这一情况的诞生，我认为组长们需要负主责，而下面的程序员也难辞其咎。
+**缺乏质量意识**：忙是一个客观因素，而“能跑就行”则是最让我感到失望的主观因素。由于S项目的研发经理们和程序员们对于代码的态度都是“能跑就行”，这意味着在我组的工作无论多么优秀，都将受到上下游代码质量和调试时间的影响。这一态度从我入职以来就从未改变，我所能做的只有尽量早地提供我能提供的一切支持，并督促他们尽早尽快地进行联调，这也是我将本组的自动化工作和代码质量作为重要工作内容的原因。但由于目前上下游所在组的资深程序员也有缺口，低级的校招生并不能按时、保质地完成编码任务，常常匆忙中进入联调阶段，由此联调阶段的时间被拉长，bug率显著上升，导致我组负责此项目的人需要投入更多的无效工作，或者说低价值工作来帮助其他组的成员完成项目。**我个人称之为：拖累。这一情况的诞生，我认为组长们需要负主责，而下面的程序员也难辞其咎。**
 
 > 有一次我在一个月之前就提供了开发并测试完成的服务镜像，但到最后一天才被告知其无法启动容器，我只能紧急加班为其解决。事后证明是其没有阅读相关文档，但此文档我已经在提供容器时交付。
 
-**团队成员之间缺乏信任**：团队对于程序员（技术人员）也缺乏尊重，自以为是，常常有产品、组长、研发经理等人在不了解技术细节的情况下，对程序员的工作进行**指手画脚，甚至是指责**。这一情况将严重打击程序员的积极性，加强了“能跑就行”的思想，又因为这种思想导致了质量问题，从而引发信任危机，最终导致了团队的恶性循环。我将此归咎于“工资更高”的人的傲慢、不尊重，以及“工资更低”的人的自卑、不自信。我并不是在说某个或某群人的性格有缺陷，这是一个团队文化/士气问题，一个乐观开朗的人在一群悲伤的人中也会被影响，人群的力量是隐秘但巨大的。
+**团队成员之间缺乏信任**：团队对于程序员（技术人员）也缺乏尊重，自以为是，常常有产品、组长、研发经理等人在不了解技术细节的情况下，对程序员的工作进行**指手画脚，甚至是指责**。这一情况将严重打击程序员的积极性，加强了“能跑就行”的思想，又因为这种思想导致了质量问题，从而引发信任危机，最终导致了团队的**恶性循环**。我将此归咎于“工资更高”的人的傲慢、不尊重，以及“工资更低”的人的自卑、不自信。我并不是在说某个或某群人的性格有缺陷，**这是一个团队文化/士气问题**，一个乐观开朗的人在一群悲伤的人中也会被影响，人群的力量是隐秘但巨大的。
 
 > 有一次产品负责人Z要求运维保存所有模型服务的日志，并告知“这就是用户的需求”。运维为此任务拟引入Clickhouse以及一整套查询系统，在我的强烈要求下，产品才解释用户的需求是保留模型服务的请求日志，而这一功能是已经通过边车代理实现的。产品负责人Z并不清楚另一个产品经理已经设计了这一功能，并且在下个版本就能上线。
 
@@ -45,6 +45,6 @@ category:
 
 ## 从集团的角度：缺少数据基因，无法给团队带来成长
 
-集团的传统业务是安全乙方，其思考的是如何在不影响用户业务的情况下，分析用户业务，为用户提供安全加固的服务并收取费用。而我们想做的是接管用户的某个数据使用流程，通过此方式保护用户的数据，使其满足某些合规要求，或在合规要求下开展之前无法开展的业务。二者从销售的角度上讲，最大的不同就在于从以前的卖盒子、卖小软件，变成了卖整个服务集群、卖一整个处理系统，其规模、成本与销售难度的对比就像是蚂蚁与大象。而集团内部的人仍然会使用传统的安全乙方思维来看待我们的项目、产品，等于用篮球运动员的标准评价桌球运动员，那丁俊晖肯定不能在姚明头上暴扣。而其积重难返，我们人微言轻，无法改变这一现状。
+集团的传统业务是安全乙方，其思考的是如何在不影响用户业务的情况下，分析用户业务，为用户提供安全加固的服务并收取费用。而我们想做的是接管用户的某个数据使用流程，通过此方式保护用户的数据，使其满足某些合规要求，或在合规要求下开展之前无法开展的业务。二者从销售的角度上讲，最大的不同就在于从以前的卖盒子、卖小软件，变成了卖整个服务集群、卖一整个处理系统，其规模、成本与销售难度的对比就像是蚂蚁与大象。而集团内部的人仍然会使用传统的安全乙方思维来看待我们的项目、产品，等于用篮球运动员的标准评价桌球运动员，那丁俊晖肯定不能在姚明头上暴扣。**而其积重难返，我们人微言轻，无法改变这一现状。**
 
 由此，我觉得S项目在集团的前途是暗淡的，是不值得我进行全身心投入的。
