--- a/source/_posts/2023-10-28-我究竟在抱怨什么.md
+++ b/source/_posts/2023-10-28-我究竟在抱怨什么.md
@@ -27,11 +27,11 @@ category:
 
 ## 从个人发展的角度：一致性缺失
 
-**组长很忙，我将成为顶缸的老实人**。组长不止负责S项目，还有其他A、B、C、D等等等等项目、沟通、汇报等任务，因此从程序员C离职以来，我就知道再也不可能像之前那样从S项目中抽身出来，全身心地投入团队和我的未来——O项目。于是，就像这次一样，在组长出差的时候，我将承受巨大的上下文转换的压力和代价，在非常短的时间内响应项目里的需求、咨询、问题，同时又要保证O项目的进度。这是因为O项目所采取的理念和技术都是很前沿的，有太多需要确认、调研、测试的内容，而我是唯一一个能够做到这些的人。而S项目，留给我的是一个我无法掌控的泥潭，我没有办法在如此有限的时间和精力投入下将S项目带回原来的正轨，同时我认为组长也不能（因为他太忙了），那么我的精力就又会被S项目所分散，**越陷越深**，直到最后**技术债务破产**。但在这之前，我感受到的是深深的无力感和失望：我既不能将S项目做好（下面我将解释除了精力以外，还有别的原因），也缺乏在O项目投入的一致性。
+**组长很忙，我将成为顶缸的老实人**。组长不止负责S项目，还有其他A、B、C、D等等等等项目、沟通、汇报等任务，因此从程序员C离职以来，我就知道再也不可能像之前那样从S项目中抽身出来，全身心地投入团队和我的未来——O项目。于是，就像这次一样，在组长出差的时候，**我将承受巨大的上下文转换的压力和代价**，在非常短的时间内响应项目里的需求、咨询、问题，同时又要保证O项目的进度。这是因为O项目所采取的理念和技术都是很前沿的，有太多需要确认、调研、测试的内容，而我是唯一一个能够做到这些的人。而S项目，留给我的是一个我无法掌控的泥潭，**我没有办法在如此有限的时间和精力投入下将S项目带回原来的正轨**，同时我认为组长也不能（因为他太忙了），那么我的精力就又会被S项目所分散，**越陷越深**，直到最后**技术债务破产**。但在这之前，我感受到的是深深的无力感和失望：我既不能将S项目做好（下面我将解释除了精力以外，还有别的原因），也缺乏在O项目投入的一致性。
 
 ## 从团队的角度：这不是一个具有"工程师文化"的团队
 
-**缺乏质量意识**：忙是一个客观因素，而“能跑就行”则是最让我感到失望的主观因素。由于S项目的研发经理们和程序员们对于代码的态度都是“能跑就行”，这意味着在我组的工作无论多么优秀，都将受到上下游代码质量和调试时间的影响。这一态度从我入职以来就从未改变，我所能做的只有尽量早地提供我能提供的一切支持，并督促他们尽早尽快地进行联调，这也是我将本组的自动化工作和代码质量作为重要工作内容的原因。但由于目前上下游所在组的资深程序员也有缺口，低级的校招生并不能按时、保质地完成编码任务，常常匆忙中进入联调阶段，由此联调阶段的时间被拉长，bug率显著上升，导致我组负责此项目的人需要投入更多的无效工作，或者说低价值工作来帮助其他组的成员完成项目。**我个人称之为：拖累。这一情况的诞生，我认为组长们需要负主责，而下面的程序员也难辞其咎。**
+**缺乏质量意识**：忙是一个客观因素，而“能跑就行”则是最让我感到失望的主观因素。**由于S项目的研发经理们和程序员们对于代码的态度都是“能跑就行”**，这意味着在我组的工作无论多么优秀，都将受到上下游代码质量和调试时间的影响。这一态度从我入职以来就从未改变，我所能做的只有尽量早地提供我能提供的一切支持，并督促他们尽早尽快地进行联调，这也是我将本组的自动化工作和代码质量作为重要工作内容的原因。但由于目前上下游所在组的资深程序员也有缺口，低级的校招生并不能按时、保质地完成编码任务，常常匆忙中进入联调阶段，由此联调阶段的时间被拉长，bug率显著上升，导致我组负责此项目的人需要投入更多的低价值工作，来完成项目。**我个人称之为：被拖累的部分。这一情况的发生，我认为组长们需要负主责，而下面的程序员也难辞其咎。**
 
 > 有一次我在一个月之前就提供了开发并测试完成的服务镜像，但到最后一天才被告知其无法启动容器，我只能紧急加班为其解决。事后证明是其没有阅读相关文档，但此文档我已经在提供容器时交付。
 
