--- a/source/_posts/2023-10-28-我究竟在抱怨什么.md
+++ b/source/_posts/2023-10-28-我究竟在抱怨什么.md
@@ -15,6 +15,10 @@ category:
     # - 技术分享
 ---
 
+> 只有一种人才有资格抱怨：
+>   基于我的职业操守，在我彻底绝望告别之前。我将尽我最大的努力做好我应该做的，按照我一贯要求自己的标准。
+>       ———— 我自己说的
+
 大约一年前我是S项目的主程，同时也是架构设计的主要负责人，由于负责O项目的前期调研工作和后续设计、开发任务，半年前我移交了所有的S项目的工程给一名资深的程序员C（6-7年的编程经验，但没有计算机相关的教育经历），仅作为架构和实现的咨询人员参与S项目。
 
 在我移交项目之时，**相关工程的测试覆盖率在80%左右，所有工程都有着相对应的CI设施，能够在每次代码推送后自动构建好可供部署的二方库**。在我移交项目之后，我仍会在设计、关键评审、代码review等方面提供帮助，但并不参与各方的联调，也不对后续修改负责。
@@ -47,4 +51,10 @@ category:
 
 集团的传统业务是安全乙方，其思考的是如何在不影响用户业务的情况下，分析用户业务，为用户提供安全加固的服务并收取费用。而我们想做的是接管用户的某个数据使用流程，通过此方式保护用户的数据，使其满足某些合规要求，或在合规要求下开展之前无法开展的业务。二者从销售的角度上讲，最大的不同就在于从以前的卖盒子、卖小软件，变成了卖整个服务集群、卖一整个处理系统，其规模、成本与销售难度的对比就像是蚂蚁与大象。而集团内部的人仍然会使用传统的安全乙方思维来看待我们的项目、产品，等于用篮球运动员的标准评价桌球运动员，那丁俊晖肯定不能在姚明头上暴扣。**而其积重难返，我们人微言轻，无法改变这一现状。**
 
-由此，我觉得S项目在集团的前途是暗淡的，是不值得我进行全身心投入的。
+而同时，由于集团效益，也没有HC重新招聘人员维护S项目，**这将加剧S项目技术债务的积累**，与我上文提到的越陷越深、拖垮团队形成有机结合，是典型的项目恶性循环。
+
+由此，我觉得S项目在集团的前途是暗淡的，被S项目拖累的团队的前途亦是暗淡的。
+
+## 总结
+
+综上，我抱怨的实际上是不负责任、推诿、不作为、得过且过的思想，对工程问题异想天开、自以为是的幼稚病，以及缺少相关基因，无法提供土壤的集团环境。就我个人而言，为了实现自我价值与身心健康，为了大团队能够进一步往下走，我不愿不想不支持再将自己的精力投入在S项目上，但基于我的职业操守，在我彻底绝望告别之前。我将尽我最大的努力做好我应该做的，按照我一贯要求自己的标准。
