--- a/source/_posts/2023-10-28-我究竟在抱怨什么.md
+++ b/source/_posts/2023-10-28-我究竟在抱怨什么.md
@@ -15,9 +15,7 @@ category:
     # - 技术分享
 ---
 
-> 只有一种人才有资格抱怨：
->   基于我的职业操守，在我彻底绝望告别之前。我将尽我最大的努力做好我应该做的，按照我一贯要求自己的标准。
->       ———— 我自己说的
+> 只有一种人才有资格抱怨：在彻底绝望地告别之前，按一贯的标准，尽最大的努力做好每一件事的人。———— 我·自己·说的
 
 大约一年前我是S项目的主程，同时也是架构设计的主要负责人，由于负责O项目的前期调研工作和后续设计、开发任务，半年前我移交了所有的S项目的工程给一名资深的程序员C（6-7年的编程经验，但没有计算机相关的教育经历），仅作为架构和实现的咨询人员参与S项目。
 
