--- a/source/_posts/2023-10-28-我究竟在抱怨什么.md
+++ b/source/_posts/2023-10-28-我究竟在抱怨什么.md
@@ -55,4 +55,8 @@ category:
 
 ## 总结
 
-综上，我抱怨的实际上是不负责任、推诿、不作为、得过且过的思想，对工程问题异想天开、自以为是的幼稚病，以及缺少相关基因，无法提供土壤的集团环境。就我个人而言，为了实现自我价值与身心健康，为了大团队能够进一步往下走，我不愿不想不支持再将自己的精力投入在S项目上，但基于我的职业操守，在我彻底绝望告别之前。我将尽我最大的努力做好我应该做的，按照我一贯要求自己的标准。
+综上，我抱怨的实际上是**不负责任、推诿、不作为、得过且过的思想**，**对工程问题异想天开、自以为是的幼稚病，以及缺少相关基因**，**无法提供土壤的集团环境**。
+
+就我个人而言，**为了实现自我价值与身心健康，为了大团队能够进一步往下走**，我**不愿**，**不想**，**不支持**再将自己的精力投入在S项目上。
+
+**但基于我的职业操守，在我彻底绝望告别之前。我将尽我最大的努力做好我应该做的，按照我一贯要求自己的标准。**
