--- a/source/_posts/2023-10-27-遨游互联网远程开发指北.md
+++ b/source/_posts/2023-10-27-遨游互联网远程开发指北.md
@@ -34,7 +34,7 @@ $ curl -v https://wh1isper.top:8080
 * Connected to wh1isper.top (::ffff:192.168.31.254) port 8080
 ```
 
-外网ipv6用户访问`yourdomain`，可以直接访问到内网机器
+外网ipv6用户访问`yourdomain`，可以通过ipv6公网地址直连
 
 ```bash
 $ curl -v https://wh1isper.top:8080
@@ -42,7 +42,7 @@ $ curl -v https://wh1isper.top:8080
 * Connected to wh1isper.top (2408:8256:3284:1522::905) port 8080 (#0)
 ```
 
-外网ipv4用户访问`yourdomain`，可以直接通过跳板机访问
+外网ipv4用户访问`yourdomain`，可以通过跳板机访问
 
 ```bash
 $ nslookup wh1isper.top
