--- a/source/_posts/2023-10-27-遨游互联网远程开发指北.md
+++ b/source/_posts/2023-10-27-遨游互联网远程开发指北.md
@@ -66,8 +66,8 @@ host: "::"
 port: 2443
 auth: password
 password: 
-cert: /home/wh1isper/cert/wh1isper.top_bundle.crt
-cert-key: /home/wh1isper/cert/wh1isper.top.key
+cert: /path/to/cert/xxx.crt
+cert-key: /path/to/cert/xxx.key
 ```
 
 然后将2443端口映射到跳板机的2443端口
