Some draft intro

--- a/source/_posts/2023-10-09-数据使用可观测性.md
+++ b/source/_posts/2023-10-09-数据使用可观测性.md
@@ -17,6 +17,9 @@ category:
     # - 读书笔记
     - 技术分享
 ---
+
+> 这篇文章是对最近看到的一些资料的整理和一些构想，我将着手在[可观测性行业发展与机遇](./2023-10-30-可观测性行业发展与机遇.md)和[定义数据使用可观测性](./2023-10-31-定义数据使用可观测性.md)中展开讨论可观测性的不同角度以及目前我对数据使用可观测性的认识
+
 # 1. 可观测性
 
 随着分布式架构渐成主流，[可观测性](https://en.wikipedia.org/wiki/Observability)（Observability）一词也日益频繁地被人提起。最初，它与[可控制性](https://en.wikipedia.org/wiki/Controllability)（Controllability）一起，是由匈牙利数学家 Rudolf E. Kálmán 针对线性动态控制系统提出的一组对偶属性，原本的含义是“可以由其外部输出推断其内部状态的程度”。
