--- a/source/_posts/2023-10-29-过剩与竞劣.md
+++ b/source/_posts/2023-10-29-过剩与竞劣.md
@@ -26,7 +26,7 @@ category:
 
 过剩来带的竞劣，表现在低端开发者的收入锐减，为整个软件生态和社会带来积极性和流动性上的巨大打击。在如今中国的软件业，开源刚刚进入繁荣阶段，却突然遭受到如此冲击，无疑会造成整个生态发展的停滞，从而在好不容易通过互联网商业追赶上的先进技术领域又一次陷入落后。
 
-正如我在[人若无名，专心练剑](./2023-10-23-人若无名专心练剑.md)这篇文章中所说的，在目前的大趋势下，继续看好计算机技术的未来发展，而在本次寒潮中坚持下来，成为中高级的开发者、优秀的CTO，则是对自己的逆周期投资。
+正如我在[人若无名，专心练剑](https://wh1isper.github.io/2023/10/22/2023-10-23-%E4%BA%BA%E8%8B%A5%E6%97%A0%E5%90%8D%E4%B8%93%E5%BF%83%E7%BB%83%E5%89%91/)这篇文章中所说的，在目前的大趋势下，继续看好计算机技术的未来发展，而在本次寒潮中坚持下来，成为中高级的开发者、优秀的CTO，则是对自己的逆周期投资。
 
 ## 感叹
 
