--- a/source/_posts/2023-10-09-数据使用可观测性.md
+++ b/source/_posts/2023-10-09-数据使用可观测性.md
@@ -18,7 +18,7 @@ category:
     - 技术分享
 ---
 
-> 这篇文章是对最近看到的一些资料的整理和一些构想，我将着手在[可观测性行业发展与机遇](./2023-10-30-可观测性行业发展与机遇.md)和[定义数据使用可观测性](./2023-10-31-定义数据使用可观测性.md)中展开讨论可观测性的不同角度以及目前我对数据使用可观测性的认识
+> 这篇文章是对最近看到的一些资料的整理和一些构想，我将着手在[可观测性行业发展与机遇](https://wh1isper.github.io/2023/10/29/2023-10-30-%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7%E8%A1%8C%E4%B8%9A%E5%8F%91%E5%B1%95%E4%B8%8E%E6%9C%BA%E9%81%87/)和[定义数据使用可观测性](https://wh1isper.github.io/2023/10/30/2023-10-31-%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E4%BD%BF%E7%94%A8%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7/)中展开讨论可观测性的不同角度以及目前我对数据使用可观测性的认识
 
 # 1. 可观测性
 
