--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -1,6 +1,6 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      可观测性行业发展与机遇	# 标题 
+title:      📕可观测性行业发展与机遇	# 标题 
 subtitle:   可观测性行业发展与机遇 #副标题
 date:       2023-10-30           # 时间
 author:     Wh1isper                      # 作者
@@ -20,14 +20,39 @@ category:
 
 ## 1. 可观测性的由来
 
+随着分布式架构渐成主流，[可观测性](https://en.wikipedia.org/wiki/Observability)（Observability）一词也日益频繁地被人提起。最初，它与[可控制性](https://en.wikipedia.org/wiki/Controllability)（Controllability）一起，是由匈牙利数学家 Rudolf E. Kálmán 针对线性动态控制系统提出的一组对偶属性，原本的含义是“可以由其外部输出推断其内部状态的程度”。
 
 ## 2. 不同视角下的可观测性
 
-
-### 2.1 
-
-
-## 3. 可观测性的新视角探索
+### 2.1 分布式追踪（Distributed Tracing）下的可观测性
 
 
-## 4. 总结
+### 2.2 云原生网络（CNF）可观测性
+
+
+### 2.3 数据治理与可观测性
+
+
+## 3. 关键技术
+
+这里提目前飞速发展的，已经成熟的像SDN，systemtap不用提（或在例证/对比的时候提）
+
+### 3.1 以OpenTelemetry为代表的可观测性框架
+
+### 3.2 以eBPF为基础的探针系统
+
+
+
+## 4. 可观测性的新视角探索
+
+### 4.1 可观测性与LLM的关系
+
+
+### 4.2 为“X”赋予可观测性，X还可以是什么？
+
+
+## 5. 总结：可观测性是将复杂系统白盒化的过程
+
+符号主义
+
+连接主义
