--- a/source/_posts/2023-10-31-定义数据使用可观测性.md
+++ b/source/_posts/2023-10-31-定义数据使用可观测性.md
@@ -1,6 +1,6 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      定义数据使用可观测性	# 标题 
+title:      📕定义数据使用可观测性	# 标题 
 subtitle:   数据使用可观测性的定义、论证与研究 #副标题
 date:       2023-10-31            # 时间
 author:     Wh1isper                      # 作者
