--- a/source/_posts/2023-03-18-AI的下一次飞跃.md
+++ b/source/_posts/2023-03-18-AI的下一次飞跃.md
@@ -1,6 +1,6 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      2023后，AI的下一次飞跃在哪	# 标题 
+title:      ⭐2023后，AI的下一次飞跃在哪	# 标题 
 subtitle:   2023后，AI的下一次飞跃在哪	 #副标题
 date:       2023-03-21 15:31             # 时间
 author:     Wh1isper                      # 作者
