--- a/source/_posts/2023-10-25-奇美拉计划构想.md
+++ b/source/_posts/2023-10-25-奇美拉计划构想.md
@@ -1,6 +1,6 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      奇美拉计划构想	# 标题 
+title:      🐱奇美拉计划构想	# 标题 
 subtitle:   奇美拉计划构想 	 #副标题
 date:       2023-10-25              # 时间
 author:     Wh1isper                      # 作者
