--- a/source/_posts/2023-10-28-我究竟在抱怨什么.md
+++ b/source/_posts/2023-10-28-我究竟在抱怨什么.md
@@ -1,6 +1,6 @@
 ---
 layout:     post                    # 使用的布局（不需要改）
-title:      我究竟在抱怨什么	# 标题 
+title:      ❗我究竟在抱怨什么	# 标题 
 subtitle:   论如何在短短几天成为高血压与抑郁症 	 #副标题
 date:       2023-10-28              # 时间
 author:     Wh1isper                      # 作者
