--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -17,21 +17,76 @@ category:
     # - 读书笔记
     - 技术分享
 ---
-
 ## 1. 可观测性的由来
 
-随着分布式架构渐成主流，[可观测性](https://en.wikipedia.org/wiki/Observability)（Observability）一词也日益频繁地被人提起。最初，它与[可控制性](https://en.wikipedia.org/wiki/Controllability)（Controllability）一起，是由匈牙利数学家 Rudolf E. Kálmán 针对线性动态控制系统提出的一组对偶属性，原本的含义是“可以由其外部输出推断其内部状态的程度”。
+随着分布式架构渐成主流，[可观测性](https://en.wikipedia.org/wiki/Observability)（Observability）一词也日益频繁地被人提起。最初，它与[可控制性](https://en.wikipedia.org/wiki/Controllability)（Controllability）一起，是由匈牙利数学家 Rudolf E. Kálmán 针对线性动态控制系统提出的一组对偶属性，原本的含义是“可以由其外部输出推断其内部状态的程度”。这一说法足够抽象，以致于我们很难理解这个词是如何在计算机相关领域。我采取的策略是：调研目前火热（和蹭热度）的开源项目和商业项目，看看在他们的视角下，可观测性在是什么，接着我们就可以总结其中涉及的关键技术，并谈谈我对可观测性还能怎么蹭的一些未来构想。
 
 ## 2. 不同视角下的可观测性
 
 ### 2.1 分布式追踪（Distributed Tracing）下的可观测性
 
+#### 概念定义
+
+现代分布式链路追踪公认的起源，是Google 在2010 年发表的论文[《Dapper : a Large-Scale Distributed Systems Tracing Infrastructure》](https://research.google/pubs/pub36356/)，为了解决如何理解和推理大规模分布式系统的行为和性能问题，从跟踪工具出发从而建设了一个监控平台。
+
+> 一个简单的案例是，如果当前一个用户请求需要经过A->B->C三个微服务，用户反馈请求超时，我们要如何快速地了解是A/B/C三个服务中的哪个出现了问题？A/B/C三个服务的稳定性、错误率如何？一个简单的想法是，如果能把跟踪一个用户请求在A/B/C三个服务的调用过程，以及每个服务的执行情况，都记录下来，那么我们就可以通过分析这些数据来解决上述问题，这就是分布式追踪的基本思想。
+
+目前，学术界一般会将可观测性分解为三个更具体方向进行研究，分别是：[事件日志](http://icyfenix.cn/distribution/observability/logging.html)、[链路追踪](http://icyfenix.cn/distribution/observability/tracing.html)和[聚合度量](http://icyfenix.cn/distribution/observability/metrics.html)，这三个方向各有侧重，又不是完全独立，它们天然就有重合或者可以结合之处，2017 年的分布式追踪峰会（2017 Distributed Tracing Summit）结束后，Peter Bourgon 撰写了总结文章[《Metrics, Tracing, and Logging》](https://peter.bourgon.org/blog/2017/02/21/metrics-tracing-and-logging.html)系统地阐述了这三者的定义、特征，以及它们之间的关系与差异，受到了业界的广泛认可。
+
+![日志、追踪与度量](../img/2023-10-09-数据使用可观测性/MetricsTracingandLogging.png)
+
+- 日志（Logging）：日志的职责是记录离散事件，通过这些记录事后分析出程序的行为。在大量节点、服务的情况下，这将产生大量的日志，因此，日志的收集、存储、分析都是一个很大的挑战。
+- 追踪（Tracing）：单体系统时代追踪的范畴基本只局限于[栈追踪](https://en.wikipedia.org/wiki/Stack_trace)（Stack Tracing），即断点的形式。微服务时代，追踪就不只局限于调用栈了，一个外部请求需要内部若干服务的联动响应，这时候完整的调用轨迹将跨越多个服务，同时包括服务间的网络传输信息与各个服务内部的调用堆栈信息。与“全链路追踪”、“[分布式追踪](https://opentracing.io/docs/overview/what-is-tracing/)”（Distributed Tracing）为同义词。追踪的主要目的是减少排除故障的时间，让程序员可以快速定位问题。
+- 度量（Metrics）：度量是指对系统中某一类信息的统计聚合。度量的主要目的是监控（Monitoring）和预警（Alert），如某些度量指标达到风险阈值时触发事件，以便自动处理或者提醒管理员介入。
+
+#### 开源标准
+
+[OpenTelemetry](https://opentelemetry.io/)合并了OpenTracing和OpenCensus项目，提供了一组API和库来标准化遥测数据的采集和传输。OpenTelemetry提供了一个安全，厂商中立的工具，这样就可以按照需要将数据发往不同的后端。其最重要的是数据格式[OTel](https://opentelemetry.io/docs/specs/otel/overview/)和其中间件[OTel Collector](https://opentelemetry.io/docs/collector/)支持。
+
+![OpenTelemetry架构图](../img/2023-10-30-可观测性行业发展与机遇/otel-diagram.svg)
+
+[OpenMetrics](https://openmetrics.io/)基于Prometheus Exposition格式的基础上进行了一些改进，并增加了一些新功能（它们称之为“实施标准”，因为Prometheus的成功）。在**Metrics**方向上，OpenTelemetry与OpenMetrics有一定同类竞争的关系。但由于OpenTelemetry通过标准格式OTel和中间件OTel Collector，因此也可以提供与OpenMetrics的兼容性（体现在对Prometheus后端的支持）。除此之外OpenTelemetry 主要是为推送而设计的，而 OpenMetrics 则是为拉动而设计的，尽管 OpenMetrics 规范同时考虑了推送和拉动机制，这也是Prometheus原本就有的设计。
+
+#### 开源产品
+
+日志收集与分析系统：
+
+- ELK技术栈：ELK是Elasticsearch、Logstash、Kibana三大开源框架首字母，通过Logstash采集并发送数据，存储到Elasticsearch这一分布式搜索引擎中，通过Kibana提供前端易用的界面
+- Clickhouse+kafka替换Elasticsearch+Kibana，提供更好的查询性能，filebeat替换Logstash提供更好的采集性能
+- 由于Log有很大的历史包袱，OpenTelemetry对Log的[各语言SDK](https://opentelemetry.io/docs/concepts/signals/logs/#language-support)支持还不完善，但其协议设计结合了分布式追踪的要求，是未来的发展方向
+
+![OpenTelemetry log系统架构](../img/2023-10-30-可观测性行业发展与机遇/otel-log-arch.png)
+
+分布式跟踪系统：
+
+- [jaeger](https://github.com/jaegertracing/jaeger): uber开源，原生支持OpenTelemetry格式，支持GRPC进行查询交互，有一个供搜索的简单UI
+- [zipkin](https://github.com/openzipkin/zipkin): twitter开源，OpenTelemetry Collector支持，Java系常用，有比较好的可视化系统
+- [skywalking](https://github.com/apache/skywalking): 华为捐献给apache，不仅提供链路追踪，也提供一些微服务的度量指标因此其与上面两个不同，是通过OpenTelemetry receiver支持OTel的格式以接入链路追踪的能力，而不是由OpenTel提供支持
+
+度量系统：
+
+- [prometheus](https://prometheus.io/): 目前已经是度量系统的事实标准了，目前看没有比较能打的替代方案。用户可以自定义metrics指标，然后在grafana中创建可视化仪表盘，或者直接使用Prometheus的查询器进行查询
+
+#### 热点学术研究
+
+TBD
 
 ### 2.2 云原生网络（CNF）可观测性
 
+#### 概念定义
+
+#### 开源标准
+
+正如上文提到的，我们可以将其看作是一种分布式追踪的应用场景，因此OpenTelemetry也可以作为其标准。
+
+#### 开源产品
+
+- [Cillium生态](https://cilium.io/): Cillium使用eBPF技术解决CNI网络问题，在此之上提供对服务的可观测性。在此之上构建的[Hubble](https://github.com/cilium/hubble)项目，提供了对服务的依赖跟踪、运维报警、应用监测、安全视图等等功能。
+![Cillium/Hubble架构图](../img/2023-10-30-可观测性行业发展与机遇/hubble_arch.png)
+- [DeepFlow](https://deepflow.io/): DeepFlow是[云杉网络](https://yunshan.net/)开发的一款可观测性产品，基于eBPF技术对系统内部进行观测，旨在为复杂的云基础设施及云原生应用提供深度可观测性。其应用调用链追踪、网络时序等功能需要商业版。
+![DeepFlow架构图](../img/2023-10-30-可观测性行业发展与机遇/deepflow-architecture.png)
 
 ### 2.3 数据治理与可观测性
-
 
 ## 3. 关键技术
 
@@ -41,15 +96,11 @@ category:
 
 ### 3.2 以eBPF为基础的探针系统
 
-
-
 ## 4. 可观测性的新视角探索
 
 ### 4.1 可观测性与LLM的关系
 
-
 ### 4.2 为“X”赋予可观测性，X还可以是什么？
-
 
 ## 5. 总结：可观测性是将复杂系统白盒化的过程
 
