--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -67,13 +67,23 @@ category:
 
 - [prometheus](https://prometheus.io/): 目前已经是度量系统的事实标准了，目前看没有比较能打的替代方案。用户可以自定义metrics指标，然后在grafana中创建可视化仪表盘，或者直接使用Prometheus的查询器进行查询
 
-#### 热点学术研究
+#### 学术研究
 
-TBD
+分布式追踪相关议题，TDB
 
 ### 2.2 云原生网络（CNF）可观测性
 
 #### 概念定义
+
+> https://lib.jimmysong.io/blog/cloud-native-network-functions/
+
+- 云原生网络不是另一种方式的 SDN，它以一种完全不同的方式来看待网络。
+- 虽然 SDN 似乎是把物理网络和机器做了虚拟化，但「云原生网络功能」（Cloud-native Network Functions，下文简称 CNF）不仅仅是容器化的网络和虚拟机，它还将网络功能分割成服务，这是 CNF 与 SDN 的一个主要区别。
+- CNF 是 OSI 网络模型中的网络功能（越底层实现起来就越困难），这些功能是根据云原生实践实现的。
+- 虽然 SDN 数据平面（这里指的是转发数据包）位于硬件 ASIC 上，或在传统内核网络转发的虚拟化盒子里，但 CNF 探索用户平面转发或更新的 eBPF 数据路径转发。
+- 在云原生数据中心中，偏向于三层的解决方案，但 CNF 的一大驱动力是电信服务提供商，他们经常下降到二层的功能。
+
+**CNF不是另一种SDN**，而是以一种完全不同的方式来看待网络。从某种意义（技术实现）上说，CNF 与 SDN 一样，都是基于软件而非硬件的解决方案，**这方便了基于软件的SDN公司的转型，即电信服务提供商**。但云原生网络有一套全新的非功能要求，与 SDN 不同。云原生的非功能要求优先考虑弹性，并推而广之，自动化也比 SDN 多得多。
 
 #### 开源标准
 
@@ -81,26 +91,45 @@ TBD
 
 #### 开源产品
 
-- [Cillium生态](https://cilium.io/): Cillium使用eBPF技术解决CNI网络问题，在此之上提供对服务的可观测性。在此之上构建的[Hubble](https://github.com/cilium/hubble)项目，提供了对服务的依赖跟踪、运维报警、应用监测、安全视图等等功能。
+与分布式追踪类似不同，CNF的开源产品主要是基于eBPF技术，实现零侵入式的观测，不需要在应用中插入代码。而这同样导致了其在可观测性方面的局限性。
+
+- [Cillium生态](https://cilium.io/): Cillium使用eBPF技术解决CNI网络问题，在此之上提供对服务的可观测性。在此之上构建的[Hubble](https://github.com/cilium/hubble)项目，提供了对服务的依赖跟踪、运维报警、应用监测、安全视图等等功能。其提供了针对OpenTelemetry的适配器。
 ![Cillium/Hubble架构图](../img/2023-10-30-可观测性行业发展与机遇/hubble_arch.png)
-- [DeepFlow](https://deepflow.io/): DeepFlow是[云杉网络](https://yunshan.net/)开发的一款可观测性产品，基于eBPF技术对系统内部进行观测，旨在为复杂的云基础设施及云原生应用提供深度可观测性。其应用调用链追踪、网络时序等功能需要商业版。
+- [DeepFlow](https://deepflow.io/): DeepFlow是[云杉网络](https://yunshan.net/)开发的一款可观测性产品，基于eBPF技术对系统内部进行观测，旨在为复杂的云基础设施及云原生应用提供深度可观测性。其探针支持OpenTelemetry格式。其应用调用链追踪、网络时序等功能需要商业版。
 ![DeepFlow架构图](../img/2023-10-30-可观测性行业发展与机遇/deepflow-architecture.png)
+
+#### 学术研究
+
+CNF、安全相关议题，TBD
+
 
 ### 2.3 数据治理与可观测性
 
-## 3. 关键技术
+> https://www.kdnuggets.com/2022/08/data-governance-observability-explained.html
 
-这里提目前飞速发展的，已经成熟的像SDN，systemtap不用提（或在例证/对比的时候提）
+#### 概念定义
 
-### 3.1 以OpenTelemetry为代表的可观测性框架
+数据可观测性是最近刚刚被提出来的词，目前对这个词聊的最多的是DataBand公司（总部在以色列特拉维夫），其在2022年被IBM收购，其将数据治理中“更快地发现数据在哪个环节出了问题”作为可观测性的定义，由此发展它的一整个平台，从而对数据ETL、数据治理全流程的观测。其实现方式和分布式追踪的方式类似，通过在数据流中插入探针，收集数据流中的元数据，通过其平台分析以此快速寻找到数据流中的问题，从而为用户提供价值。
 
-### 3.2 以eBPF为基础的探针系统
+#### 开源标准
+
+N/A
+
+#### 学术研究
+
+数据库、数据治理相关议题，TBD
+
+## 3. 关键技术总结
+
+- **以OpenTelemetry为基础的可观测性架构**：OpenTelemetry为目前的开源生态提供了标准化的数据格式、API接口方式，可以支持不同开源项目或商业项目与其对接，并允许其自定义自己的数据属性。**目前看到的所有项目都有相关工程和方法与OpenTelemetry结合，其已经成为当前开放生态的标准**
+- **以eBPF技术为基础的无侵入探针**：其已经成为无侵入式的基础
+
 
 ## 4. 可观测性的新视角探索
 
-### 4.1 可观测性与LLM的关系
+### 4.1 为“X”赋予可观测性，X还可以是什么？
 
-### 4.2 为“X”赋予可观测性，X还可以是什么？
+### 4.2 从符号主义到连接主义：可观测性与LLM
 
 ## 5. 总结：可观测性是将复杂系统白盒化的过程
 
