--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -94,14 +94,13 @@ category:
 与分布式追踪类似不同，CNF的开源产品主要是基于eBPF技术，实现零侵入式的观测，不需要在应用中插入代码。而这同样导致了其在可观测性方面的局限性。
 
 - [Cillium生态](https://cilium.io/): Cillium使用eBPF技术解决CNI网络问题，在此之上提供对服务的可观测性。在此之上构建的[Hubble](https://github.com/cilium/hubble)项目，提供了对服务的依赖跟踪、运维报警、应用监测、安全视图等等功能。其提供了针对OpenTelemetry的适配器。
-![Cillium/Hubble架构图](../img/2023-10-30-可观测性行业发展与机遇/hubble_arch.png)
-- [DeepFlow](https://deepflow.io/): DeepFlow是[云杉网络](https://yunshan.net/)开发的一款可观测性产品，基于eBPF技术对系统内部进行观测，旨在为复杂的云基础设施及云原生应用提供深度可观测性。其探针支持OpenTelemetry格式。其应用调用链追踪、网络时序等功能需要商业版。
-![DeepFlow架构图](../img/2023-10-30-可观测性行业发展与机遇/deepflow-architecture.png)
+  ![Cillium/Hubble架构图](../img/2023-10-30-可观测性行业发展与机遇/hubble_arch.png)
+- [DeepFlow](https://deepflow.io/): DeepFlow是[云杉网络](https://yunshan.net/)开发的一款可观测性产品，基于eBPF技术对系统内部进行观测，旨在为复杂的云基础设施及云原生应用提供深度可观测性。其探针支持OpenTelemetry格式。其应用调用链追踪、网络时序等功能需要商业版。其母公司原业务是SDN服务，其通过DeepFlow为用户提供更加细粒度的支持，帮助定位网关、基础设施、客户业务的故障和性能问题。
+  ![DeepFlow架构图](../img/2023-10-30-可观测性行业发展与机遇/deepflow-architecture.png)
 
 #### 学术研究
 
 CNF、安全相关议题，TBD
-
 
 ### 2.3 数据治理与可观测性
 
@@ -122,17 +121,35 @@ N/A
 ## 3. 关键技术总结
 
 - **以OpenTelemetry为基础的可观测性架构**：OpenTelemetry为目前的开源生态提供了标准化的数据格式、API接口方式，可以支持不同开源项目或商业项目与其对接，并允许其自定义自己的数据属性。**目前看到的所有项目都有相关工程和方法与OpenTelemetry结合，其已经成为当前开放生态的标准**
-- **以eBPF技术为基础的无侵入探针**：其已经成为无侵入式的基础
 
+> 传统的 APM 无法实现真正的可观测性：一方面插桩行为已经修改了原程序，逻辑上已无法实现原程序的可观测性；另一方面云原生基础设施组件越来越多，基础服务难以插桩导致观测盲点越来越多。实际上，插桩的方式在金融、电信等重要行业的核心业务系统中几乎无法落地。eBPF 由于其零侵扰的优势，避免了 APM 插桩的缺点，是云原生时代实现可观测性的关键技术。—— [DeepFlow: eBPF是实现可观测性的关键技术](https://deepflow.io/zh/ebpf-the-key-technology-to-observability)
+
+- **以eBPF技术为基础的无侵入探针**：eBPF和应用程序的代码之间划上了一道清晰的界限，使得我们能在不对应用程序做任何修改的前提下，通过获取外部数据就能确定其内部状态。**目前看到新一代的观测系统/平台都是以eBPF作为核心技术进行开发的**
 
 ## 4. 可观测性的新视角探索
 
 ### 4.1 为“X”赋予可观测性，X还可以是什么？
 
+#### 数据使用可观测性：数据分享视角下的可观测性
+
+数据分享是具有重要意义的，其通过数据流通的方式，让数据的价值最大化。由于监管、隐私、商业秘密等考虑，许多研究都关注于在数据分享的过程中，如何保护数据的隐私性、安全性（机密性），从而提出了[Data Station](https://arxiv.org/abs/2305.03842)的数据托管方式，[联邦学习](https://en.wikipedia.org/wiki/Federated_learning)的机器学习算法方式，[同态加密](https://en.wikipedia.org/wiki/Homomorphic_encryption)的加密计算方式，[TEE](https://en.wikipedia.org/wiki/Trusted_execution_environment)的硬件加密方式，以及各种各样的一体化解决方案。这与微服务初期人们开始考虑如何让业务跑起来是类似的，而如何了解到数据分享的过程中，数据被使用的情况，则是数据分享视角下的可观测性需要考虑的。
+
+了解数据被使用的情况有如下好处：
+
+- 隐私政策的实现：用户可以更细粒度地了解、授权自己的数据被使用的手段，从而更好地保护自己的隐私
+- 数据使用的监管：数据的使用情况可以被监管机构进行监管，从而保证数据的合法使用
+- 数据合约的实现：数据的使用情况可以被记录下来，从而可以实现数据的合约，如数据的使用次数、使用时间、使用范围等等，同时促进数据价值评估的发展
+
 ### 4.2 从符号主义到连接主义：可观测性与LLM
+
+目前，可观测性展现出符号主义的特征，基于目前已有技术对系统遥测信息等内容进行采集、存储、处理，通过人为地对系统进行分析，对业务进行总结的方式，创建出可视化的仪表盘、规划和实现告警系统、建立供人分析的链路，通过上述流程，我们建立起了一个可观测系统，基于此对问题进行快速定位和解决。我们会发现，这个过程中需要富有经验的SRE人员、高级的开发人员共同参与，其困难和投入是巨大的，这也从侧面显示了相关服务商地价值（DeepFlow、isovalent等公司就是提供了帮助用户优化系统的服务，就如同商业数据库一样）。
+
+这种情况在运营类的技术活动中屡见不鲜，从安全运营的经验来看，微软基于LLM推出的Microsoft Security Copilot为安全团队提供了一个可以持续学习、快速高效的助手，能够让团队更快地处理更多地威胁情报。从这一角度出发，将遥测信息输入LLM大模型，让大模型帮助人们对信息进行提炼，对系统进行分析，对业务进行总结，从而提供更加高效高质量的可观测性，是一个值得探索的方向。
+
+
 
 ## 5. 总结：可观测性是将复杂系统白盒化的过程
 
-符号主义
+可观测性在应用层上的主要应用：分布式追踪的领域，已经趋于成熟，形成了以OpenTelemetry为基础的行业统一标准。基础设施层面，依托云原生的蓬勃发展，从CNF出发，基于eBPF技术对云原生中的基础设施和服务提供观测，是目前蓬勃发展的热点。
 
-连接主义
+从复杂系统的白盒化角度出发，我们可以发现仍有许多角度等待探索，如数据治理、LLM等等。这些领域的探索，将会为我们提供更多的机遇。
