Update some link

--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -98,6 +98,8 @@ category:
 - [DeepFlow](https://deepflow.io/): DeepFlow是[云杉网络](https://yunshan.net/)开发的一款可观测性产品，基于eBPF技术对系统内部进行观测，旨在为复杂的云基础设施及云原生应用提供深度可观测性。其探针支持OpenTelemetry格式。其应用调用链追踪、网络时序等功能需要商业版。其母公司原业务是SDN服务，其通过DeepFlow为用户提供更加细粒度的支持，帮助定位网关、基础设施、客户业务的故障和性能问题。
   ![DeepFlow架构图](../img/2023-10-30-可观测性行业发展与机遇/deepflow-architecture.png)
 
+> DeepFlow发文表示相比和Hubble自己的优势很大功能很强，在我看来其是用社区+商业方案+服务对比开源版本的功能，并不是很平等：https://zhuanlan.zhihu.com/p/615790142
+
 #### 学术研究
 
 CNF、安全相关议题，TBD
@@ -108,7 +110,9 @@ CNF、安全相关议题，TBD
 
 #### 概念定义
 
-数据可观测性是最近刚刚被提出来的词，目前对这个词聊的最多的是DataBand公司（总部在以色列特拉维夫），其在2022年被IBM收购，其将数据治理中“更快地发现数据在哪个环节出了问题”作为可观测性的定义，由此发展它的一整个平台，从而对数据ETL、数据治理全流程的观测。其实现方式和分布式追踪的方式类似，通过在数据流中插入探针，收集数据流中的元数据，通过其平台分析以此快速寻找到数据流中的问题，从而为用户提供价值。
+数据可观测性是最近刚刚被提出来的词，目前对这个词聊的最多的是[DataBand](https://databand.ai/)公司（总部在以色列特拉维夫），其在2022年被IBM收购，其将数据治理中“更快地发现数据在哪个环节出了问题”作为可观测性的定义，由此发展它的一整个平台，从而对数据ETL、数据治理全流程的观测。其实现方式和分布式追踪的方式类似，通过在数据流中插入探针，收集数据流中的元数据，通过其平台分析以此快速寻找到数据流中的问题，从而为用户提供价值。
+
+> 在DataBand的demo的演讲里，可以明显看出他们做的是数据治理和数据基础设施结合（DataOps）：https://www.youtube.com/watch?v=lmiLSgnptBs
 
 #### 开源标准
 
@@ -140,12 +144,13 @@ N/A
 - 数据使用的监管：数据的使用情况可以被监管机构进行监管，从而保证数据的合法使用
 - 数据合约的实现：数据的使用情况可以被记录下来，从而可以实现数据的合约，如数据的使用次数、使用时间、使用范围等等，同时促进数据价值评估的发展
 
+> 我将在[定义数据使用可观测性](https://wh1isper.github.io/2023/10/30/2023-10-31-%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E4%BD%BF%E7%94%A8%E5%8F%AF%E8%A7%82%E6%B5%8B%E6%80%A7/)中详细聊聊这一系统概念和系统应该如何实现，以及其是如何与目前的数据分享方法相结合的
+
 ### 4.2 从符号主义到连接主义：可观测性与LLM
 
 目前，可观测性展现出符号主义的特征，基于目前已有技术对系统遥测信息等内容进行采集、存储、处理，通过人为地对系统进行分析，对业务进行总结的方式，创建出可视化的仪表盘、规划和实现告警系统、建立供人分析的链路，通过上述流程，我们建立起了一个可观测系统，基于此对问题进行快速定位和解决。我们会发现，这个过程中需要富有经验的SRE人员、高级的开发人员共同参与，其困难和投入是巨大的，这也从侧面显示了相关服务商地价值（DeepFlow、isovalent等公司就是提供了帮助用户优化系统的服务，就如同商业数据库一样）。
 
 这种情况在运营类的技术活动中屡见不鲜，从安全运营的经验来看，微软基于LLM推出的Microsoft Security Copilot为安全团队提供了一个可以持续学习、快速高效的助手，能够让团队更快地处理更多地威胁情报。从这一角度出发，将遥测信息输入LLM大模型，让大模型帮助人们对信息进行提炼，对系统进行分析，对业务进行总结，从而提供更加高效高质量的可观测性，是一个值得探索的方向。
-
 
 
 ## 5. 总结：可观测性是将复杂系统白盒化的过程
