--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -150,7 +150,9 @@ N/A
 
 目前，可观测性展现出符号主义的特征，基于目前已有技术对系统遥测信息等内容进行采集、存储、处理，通过人为地对系统进行分析，对业务进行总结的方式，创建出可视化的仪表盘、规划和实现告警系统、建立供人分析的链路，通过上述流程，我们建立起了一个可观测系统，基于此对问题进行快速定位和解决。我们会发现，这个过程中需要富有经验的SRE人员、高级的开发人员共同参与，其困难和投入是巨大的，这也从侧面显示了相关服务商地价值（DeepFlow、isovalent等公司就是提供了帮助用户优化系统的服务，就如同商业数据库一样）。
 
-这种情况在运营类的技术活动中屡见不鲜，从安全运营的经验来看，微软基于LLM推出的Microsoft Security Copilot为安全团队提供了一个可以持续学习、快速高效的助手，能够让团队更快地处理更多地威胁情报。从这一角度出发，将遥测信息输入LLM大模型，让大模型帮助人们对信息进行提炼，对系统进行分析，对业务进行总结，从而提供更加高效高质量的可观测性，是一个值得探索的方向。
+> DeepFlow提供的用户案例：https://deepflow.io/zh/ebpf-the-key-technology-to-observability/#0x4-DeepFlow-%E7%94%A8%E6%88%B7%E7%9A%84%E7%9C%9F%E5%AE%9E%E4%BD%BF%E7%94%A8%E6%A1%88%E4%BE%8B
+
+这种情况在运营类的技术活动中屡见不鲜，从安全运营的经验来看，微软基于LLM推出的[Microsoft Security Copilot](https://www.microsoft.com/en-us/security/business/ai-machine-learning/microsoft-security-copilot)为安全团队提供了一个可以持续学习、快速高效的助手，能够让团队更快地处理更多地威胁情报。从这一角度出发，将遥测信息输入LLM大模型，让大模型帮助人们对信息进行提炼，对系统进行分析，对业务进行总结，从而提供更加高效高质量的可观测性，是一个值得探索的方向。
 
 
 ## 5. 总结：可观测性是将复杂系统白盒化的过程
