--- a/source/_posts/2023-10-30-可观测性行业发展与机遇.md
+++ b/source/_posts/2023-10-30-可观测性行业发展与机遇.md
@@ -124,6 +124,31 @@ CNF、安全相关议题，TBD
 
 > 在DataBand的demo的演讲里，可以明显看出他们做的是数据治理和数据基础设施结合（DataOps）：https://www.youtube.com/watch?v=lmiLSgnptBs
 
+我们可以认为，目前数据可观测性（Data observability）的概念就是用全流程、持续性地收集数据信息、测试数据等数据治理手段来实现数据治理的目标——数据质量的持续观测和改善，将数据可观测性作为一种技术手段和解决方案，将得到一个系统/平台，以逐渐实现该目标，同时支持快速发现数据问题，减少平均处理时间。
+
+#### 关键领域
+
+> https://learn.microsoft.com/en-us/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/manage-observability
+
+大多数数据平台都在数据可观测性的这些关键领域运行：
+
+- 数据平台服务监控
+- 数据管道性能监控
+- 数据质量监控
+- 数据脉络
+- 数据发现
+
+端到端数据可观察性不仅包括捕获事件和测量所有这些组件的指标，还包括关联这些事件和指标。这样就能全面了解企业数据环境的健康状况和可靠性。
+
+
+| Stage                               | Data platform service monitoring                                                                                                                                                                                                                             | Data pipeline performance monitoring                                                                                                    | Data quality monitoring                                                                                                  | Data lineage                                                                                                                                               | Data discovery                                                                                |
+| ----------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
+| **Stage 5 (Highly advanced)** | Data is collected across all the data observability components from one or more data products in a unified view and is correlated using machine learning to find any anomalies. Dashboards track SLO, SLI, and SLA across all data observability components. | Data pipeline performance metrics are tracked across multiple data products. Root cause analysis is completed and driven by the system. | A high Level of trust in data quality is established. Data consumers can verify the reliability of data.                 | Data lineage is visually represented and is used in multiple ways, such as tracing root causes of pipeline failure, data quality analysis, and compliance. | Data consumers can easily find available data that they need.                                 |
+| **Stage 4 (Advanced)**        | Dashboards track SLO, SLI, and SLA across the most critical data observability components. Platform monitoring data and pipeline performance monitoring data are correlated using automation.                                                                | Data incident tools monitor and measure TTD and TTR metrics for any incidents.                                                          | Data quality is maintained through a framework that's usable across multiple data products and tracked using dashboards. | Data lineage includes data quality tags and is connected to data discoverability.                                                                          | Data lineage is now connected to data discoverability and includes data quality tags as well. |
+| **Stage 3 (Evolving)**        | Well defined SLO, SLI, and SLA cover most critical almost all components for Data Observability. Data incidents are managed with specialized tools.                                                                                                          | Platform monitoring data is correlated with data pipeline performance monitoring using some amount of automation.                       | Data quality checks are well defined and mapped to custom metrics.                                                       | Data lineage has matured to contain enough metadata needed for decision making.                                                                            | Data discoverability is achieved using specialized data catalog tools.                        |
+| **Stage 2 (Planning)**        | An initial draft of SLO, SLI, and SLA covers the most critical components needed for data observability. Platform monitoring data is centralized and there is a unified view of the entire data environment. All data incident management is manual.         | Data pipeline performance metrics are defined and measured.                                                                             | Data quality checks exist, but no standard metric is defined, measured, and visualized.                                  | Data lineage is limited to single data product or isn't tracked.                                                                                           | Data discoverability is achieved but no sophisticated tools are used.                         |
+| **Stage 1 Learning**          | Every critical platform service (provider-managed and self-managed) is monitoried in the data landscape.                                                                                                                                                     | Pipeline monitoring is minimal. Failures trigger alerts, but have no insights into any possible cause.                                  | Data quality tests can be run from the pipeline, but no metric is measured or tracked.                                   | Data lineage doesn't exist.                                                                                                                                | Data discoverability doesn't exist.                                                           |
+
 #### 开源标准
 
 N/A
@@ -143,7 +168,6 @@ N/A
 ## 4. 可观测性的新视角探索
 
 ### 4.1 为“X”赋予可观测性，X还可以是什么？
-
 
 #### 安全可观测性：构建于可观测性上的安全运营与态势感知
 
@@ -182,7 +206,6 @@ N/A
 这种情况在运营类的技术活动中屡见不鲜，从安全运营的经验来看，微软基于LLM推出的[Microsoft Security Copilot](https://www.microsoft.com/en-us/security/business/ai-machine-learning/microsoft-security-copilot)为安全团队提供了一个可以持续学习、快速高效的助手，能够让团队更快地处理更多地威胁情报。从这一角度出发，将遥测信息输入LLM大模型，让大模型帮助人们对信息进行提炼，对系统进行分析，对业务进行总结，从而提供更加高效高质量的可观测性，是一个值得探索的方向。
 
 > 在这一回答中，我们看到了类似的观点：中国有没有类似splunk、datadog这种类型的公司吗？ - 共识粉碎机的回答 - 知乎 https://www.zhihu.com/question/355794555/answer/3178453725
-
 
 ## 5. 总结：可观测性是将复杂系统白盒化的过程
 
